final edit of HTML semantics, fix the gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ p {
 .content {
     width: 75%;
     display: inline-block;
-    margin-left: 25px;
+    margin-left: 20px;
 }
 
 /* Styling for main content section */
